@@ -1,3 +1,6 @@
+- execve() now finds commands in the current directory again, even if you
+  omit the leading "./" path name.
+
 - The execve() code that looks for the command/script file now begins by
   checking if the file name includes path separators. If it does not,
   then the search for the command begins with the resident command list;
